// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should create a default medium secondry button 1`] = `
<button
  class="sc-bcXHqe dXjPqy"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a large secondry button 1`] = `
<button
  class="sc-bcXHqe jNhmlX"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a primary button 1`] = `
<button
  class="sc-bcXHqe fuABCA"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a small secondry button 1`] = `
<button
  class="sc-bcXHqe jwHAbw"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a yellow labeless button 1`] = `
<button
  class="sc-bcXHqe dXjPqy"
  label=""
  style="background-color: yellow;"
/>
`;
